syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.personproperties.support.input";

import "plugins/partitions/support.proto";
import "google/protobuf/any.proto";


message PersonPropertyIdInput {
    google.protobuf.Any id = 1;
}

message PersonPropertyValueInput {
    int32 pId = 1;
    optional google.protobuf.Any value = 2;
}

message PersonPropertyValueMapInput {
    PersonPropertyIdInput personPropertyId = 1;
    repeated PersonPropertyValueInput propertyValues = 2;
}

message PersonPropertyTimeInput {
    int32 pId = 1;
    double propertyValueTime = 2;
}

message PersonPropertyTimeMapInput {
    PersonPropertyIdInput personPropertyId = 1;
    repeated PersonPropertyTimeInput propertyTimes = 2;
}

message PersonPropertyDimensionInput {
    PersonPropertyIdInput personPropertyId = 1;
    bool trackTimes = 2;
    repeated google.protobuf.Any values = 3;
}

message PersonPropertyFilterInput {
    PersonPropertyIdInput personPropertyId = 1;
    EqualityInput equality = 2;
    google.protobuf.Any personPropertyValue = 3;
}
